# src/router.ts
@@ -3,12 +3,16 @@ import passport from "passport";
 import {ProjectController} from "./controllers/project.controller";
 import {UserController} from "./controllers/user.controller";
 import {TeamController} from "./controllers/team.controller";
+import {JobController} from "./controllers/pipeline-controllers/job.controller";
+import {JobService} from "./services/pipeline-services/job.service";
+import {JobDao} from "./dao/pipeline-dao/job.dao";
 
 const router = Router();
 
 const projectController = new ProjectController();
 const userController = new UserController();
 const teamController = new TeamController();
+const jobController = new JobController();
 
 router.get('/auth/github', passport.authenticate('github'));
 router.get('/auth/github/callback',
@@ -29,5 +33,8 @@ router.get('/teams', teamController.getAll.bind(teamController));
 router.get('/teams/:id', teamController.getById.bind(teamController));
 router.post('/teams', teamController.add.bind(teamController));
 router.post('/teams/add-member', teamController.addMember.bind(teamController));
+
+router.post('/jobs', jobController.createJob.bind(jobController));
+router.post('/jobs/pipeline-step', jobController.createPipelineStep.bind(jobController));
 
 export default router;
